Mirrored custom normals broken again #116130

Closed
opened 2023-12-13 10:41:51 +01:00 by Robert S · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: 768cd9b7630c
Worked: 4.0

Caused by c53e220aef

Short description of error
Seems this issue is back... #108930

Exact steps for others to reproduce the error
Open attached example.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: `768cd9b7630c` Worked: 4.0 Caused by c53e220aefe8 **Short description of error** Seems this issue is back... https://projects.blender.org/blender/blender/issues/108930 **Exact steps for others to reproduce the error** Open attached example.
Robert S added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-13 10:41:51 +01:00

I don't see anything wrong in attached file.

I don't see anything wrong in attached file.
Iliya Katushenock added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-12-13 11:14:29 +01:00
Author

image

![image](/attachments/c937f860-f69e-438c-afb0-ab2838048931)
130 KiB

image

![image](/attachments/ef370f6f-aa9a-4ab3-8db8-58592b7c1fc9)
945 KiB
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-12-13 11:31:44 +01:00
Member

Caused by c53e220aef

Caused by c53e220aefe8
Philipp Oeser added the
Module
Modeling
label 2023-12-13 12:12:32 +01:00
Philipp Oeser self-assigned this 2023-12-13 12:12:38 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-12-13 12:12:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-13 13:53:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116130
No description provided.