Fix #116130: Mirrored custom normals broken again

Caused by c53e220aefe8

Above commit was working on the `mesh` (not the `result`) -- basically a
typo...

Pull Request: https://projects.blender.org/blender/blender/pulls/116134